--- a/.github/workflows/manual_tests.yml
+++ b/.github/workflows/manual_tests.yml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install selenium webdriver-manager
+          pip install selenium
+          pip install webdriver-manager
           pip install pylance
 
       - name: Run Full Set of Tests
