--- a/.github/workflows/manual_tests.yml
+++ b/.github/workflows/manual_tests.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install pylance
+          
+      - name: Install Dependencies
+        run: |
           pip install selenium webdriver-manager
 
       - name: Run Full Set of Tests
