--- a/.github/workflows/manual_tests.yml
+++ b/.github/workflows/manual_tests.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install selenium
+          pip install selenium pylance webdriver-manager
 
       - name: Run Full Set of Tests
         if: ${{ inputs.test_case == 'full' }}
