--- a/.github/workflows/nightly_tests.yml
+++ b/.github/workflows/nightly_tests.yml
@@ -2,7 +2,7 @@ name: Nightly Test Suite
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs every day at midnight UTC
+    - cron: '* * * * *'  # Runs every day at midnight UTC
 
 jobs:
   run-tests:
@@ -17,7 +17,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install selenium
+          pip install -r ./requirements.txt
 
       - name: Run Full Set of Tests
         run: |
