--- a/.github/workflows/nightly_tests.yml
+++ b/.github/workflows/nightly_tests.yml
@@ -2,7 +2,7 @@ name: Nightly Test Suite
 
 on:
   schedule:
-    - cron: '* * * * *'  # Runs every day at midnight UTC
+    - cron: '0 0 * * *'  # Runs every day at midnight UTC
 
 jobs:
   run-tests:
